test_cases/pass/p37.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT a1b2c3
a1b2c3=77
PRINT: a1b2c3
END SCRIPT
