test_cases/fail/f20.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT 3x
END SCRIPT
